--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div id="header" data-gnl="24 24p ortada göbekte" class="beri-alt-1 kenar-alt">
+<div id="header" data-gnl="24 24p ortada göbekte">
   <div data-gnl="ortada göbekte" data-ort="solda">
     <ul class="menü-genel" data-gnl="0 göbekte">
       <li><a href="https://data-deveb.github.io" class="logo beri-sol-1">deveb</a></li>
