--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -11,7 +11,7 @@ pre{
 #header{
 	background-color: #2c2171;
 	min-height:72px;
-	
+
 }
 .menu
 {
@@ -95,8 +95,12 @@ pre{
 
 .sayfa-başlığı{
 	background:rgb(114, 137, 218) none repeat scroll 0% 0%;
-	padding-top:20px;
-	padding-bottom:15px;
+	padding:64px 0;
+	color:#fff;
+}
+.sayfa-başlığı h1{
+	text-align: center;
+	font-weight: 300;
 	color:#fff;
 }
 
