--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -99,7 +99,7 @@ pre{
 }
 .sayfa-başlığı h1{
 	font-weight: 300;
-	color:rgb(114, 137, 218) none repeat scroll 0% 0%;
+	color:rgb(114, 137, 218);
 }
 
 
