--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>Deveb{% if page.title %} {{ page.title }}{% endif %}</title>
+<title>{% if page.title %} {{ page.title }}{% endif %}</title>
 
 <!-- Kök -->
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
