--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   {% if page.title %}<div data-gnl="1 1p" class="sayfa-başlığı">
     <h1 data-gnl="23 24p ortada ortada-ol">{{ page.title }}</h1>
   </div>{% endif %}
-  <div data-gnl="23 göbekte-ol" data-dev="kaplama">
+  <div data-gnl="23 göbekte-ol" data-orta="büyükleriyle-kaplama">
     <div data-gnl="24" data-ort="4">
     {% include icerik.html %}
     </div>
