--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 <title>{% if page.title %} {{ page.title }}{% endif %}</title>
 
 <!-- Kök -->
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
 <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet">
