--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,10 @@
 <link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
 <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
 
+<!--highlight.js-->
+<link rel="stylesheet" href="https://data-deveb.github.io/assets/plugins/prism/prism.css">
+<script src="https://data-deveb.github.io/assets/plugins/prism/prism.js"></script>
+
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
