--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,9 @@
 <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
 
 <!--highlight.js-->
-<link rel="stylesheet" href="https://data-deveb.github.io/assets/plugins/prism/prism.css">
-<script src="https://data-deveb.github.io/assets/plugins/prism/prism.js"></script>
+<link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
