--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,10 +14,10 @@
 
 <!--highlight.js-->
 <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+      href="https://data-deveb.github.io/assets/plugins/prism/prism.css">
 
+<script src="https://data-deveb.github.io/assets/plugins/prism/prism.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
