--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,12 +12,11 @@
 <link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
 <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
 
-<!--highlight.js-->
+<!--prism.js-->
 <link rel="stylesheet"
       href="https://data-deveb.github.io/assets/plugins/prism/prism.css">
 
 <script src="https://data-deveb.github.io/assets/plugins/prism/prism.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
