--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -1,4 +1,4 @@
-pre{
+/*pre{
 	color: #000000;
 	background-color: #f0f0f0 !important;
 	padding: 1em;
@@ -6,7 +6,7 @@ pre{
 	border-radius: 3px;
 	width: 100%;
 	overflow-x: auto;
-}
+}*/
 .header{min-height: 72px;}
 #header{
 	background-color: #2c2171;
