--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -4,7 +4,8 @@
   <li><a href="/belgeler/ekran-orgusu.html">Ekran Örgüsü</a>
   <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a>
     <ul>
-      <li><a href="/belgeler/kap-orgusu/olcekler.html">Ölçekler</a>
+      <li><a href="/belgeler/kap-orgusu/konumlama.html">Konumlama</a></li>
+      <li><a href="/belgeler/kap-orgusu/olcekler.html">Ölçekler</a></li>      
       <li><h6 data-metin="ana gri">Örnekler</h6></li>
       <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html">Eşit Bölme #1</a></li>
       <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme-2.html">Eşit Bölme #2</a></li>
