Oran düzeni silindi, genleşme düzeni geldi.

--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -4,7 +4,7 @@
   <li><a href="/belgeler/ekran-orgusu.html">Ekran Örgüsü</a>
   <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a>
     <ul>
-      <li><a href="/belgeler/kap-orgusu/oran-duzeni.html">Oran Düzeni</a></li>
+      <li><a href="/belgeler/kap-orgusu/genlesme-duzeni.html">Genleşme Düzeni</a></li>
       <li><a href="/belgeler/kap-orgusu/konumlama.html">Konumlama</a></li>
       <li><a href="/belgeler/kap-orgusu/olcekler.html">Ölçekler</a></li>
       <li><h6 data-metin="ana gri">Örnekler</h6></li>
