--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -189,19 +189,19 @@ G00 GENEL | Ekran ölçeği: 0 ≤ * < ∞
     [data-gnl~="gizli"]{display: none;}
 
     /* Kap Örgüsü Parça Ayarları */
-    [data-gnl~="1"]{--parça:1;}   [data-gnl~="2"]{--parça:2;}   [data-gnl~="3"]{--parça:3;}   [data-gnl~="4"]{--parça:4;}
-    [data-gnl~="5"]{--parça:5;}   [data-gnl~="6"]{--parça:6;}   [data-gnl~="7"]{--parça:7;}   [data-gnl~="8"]{--parça:8;}
-    [data-gnl~="9"]{--parça:9;}   [data-gnl~="10"]{--parça:10;} [data-gnl~="11"]{--parça:11;} [data-gnl~="12"]{--parça:12;}
-    [data-gnl~="13"]{--parça:13;} [data-gnl~="14"]{--parça:14;} [data-gnl~="15"]{--parça:15;} [data-gnl~="16"]{--parça:16;}
-    [data-gnl~="17"]{--parça:17;} [data-gnl~="18"]{--parça:18;} [data-gnl~="19"]{--parça:19;} [data-gnl~="20"]{--parça:20;}
-    [data-gnl~="21"]{--parça:21;} [data-gnl~="22"]{--parça:22;} [data-gnl~="23"]{--parça:23;} [data-gnl~="24"]{--parça:24;}
+    [data-gnl~="1"]{--parça:1}   [data-gnl~="2"]{--parça:2}   [data-gnl~="3"]{--parça:3}   [data-gnl~="4"]{--parça:4}
+    [data-gnl~="5"]{--parça:5}   [data-gnl~="6"]{--parça:6}   [data-gnl~="7"]{--parça:7}   [data-gnl~="8"]{--parça:8}
+    [data-gnl~="9"]{--parça:9}   [data-gnl~="10"]{--parça:10} [data-gnl~="11"]{--parça:11} [data-gnl~="12"]{--parça:12}
+    [data-gnl~="13"]{--parça:13} [data-gnl~="14"]{--parça:14} [data-gnl~="15"]{--parça:15} [data-gnl~="16"]{--parça:16}
+    [data-gnl~="17"]{--parça:17} [data-gnl~="18"]{--parça:18} [data-gnl~="19"]{--parça:19} [data-gnl~="20"]{--parça:20}
+    [data-gnl~="21"]{--parça:21} [data-gnl~="22"]{--parça:22} [data-gnl~="23"]{--parça:23} [data-gnl~="24"]{--parça:24}
 
-    [data-gnl~="1p"]{--par:1;}   [data-gnl~="2p"]{--par:2;}   [data-gnl~="3p"]{--par:3;}   [data-gnl~="4p"]{--par:4;}
-    [data-gnl~="5p"]{--par:5;}   [data-gnl~="6p"]{--par:6;}   [data-gnl~="7p"]{--par:7;}   [data-gnl~="8p"]{--par:8;}
-    [data-gnl~="9p"]{--par:9;}   [data-gnl~="10p"]{--par:10;} [data-gnl~="11p"]{--par:11;} [data-gnl~="12p"]{--par:12;}
-    [data-gnl~="13p"]{--par:13;} [data-gnl~="14p"]{--par:14;} [data-gnl~="15p"]{--par:15;} [data-gnl~="16p"]{--par:16;}
-    [data-gnl~="17p"]{--par:17;} [data-gnl~="18p"]{--par:18;} [data-gnl~="19p"]{--par:19;} [data-gnl~="20p"]{--par:20;}
-    [data-gnl~="21p"]{--par:21;} [data-gnl~="22p"]{--par:22;} [data-gnl~="23p"]{--par:23;} [data-gnl~="24p"]{--par:24;}
+    [data-gnl~="1p"]{--par:1}   [data-gnl~="2p"]{--par:2}   [data-gnl~="3p"]{--par:3}   [data-gnl~="4p"]{--par:4}
+    [data-gnl~="5p"]{--par:5}   [data-gnl~="6p"]{--par:6}   [data-gnl~="7p"]{--par:7}   [data-gnl~="8p"]{--par:8}
+    [data-gnl~="9p"]{--par:9}   [data-gnl~="10p"]{--par:10} [data-gnl~="11p"]{--par:11} [data-gnl~="12p"]{--par:12}
+    [data-gnl~="13p"]{--par:13} [data-gnl~="14p"]{--par:14} [data-gnl~="15p"]{--par:15} [data-gnl~="16p"]{--par:16}
+    [data-gnl~="17p"]{--par:17} [data-gnl~="18p"]{--par:18} [data-gnl~="19p"]{--par:19} [data-gnl~="20p"]{--par:20}
+    [data-gnl~="21p"]{--par:21} [data-gnl~="22p"]{--par:22} [data-gnl~="23p"]{--par:23} [data-gnl~="24p"]{--par:24}
 
     /* Kap Örgüsü Parça Hesaplama */
     [data-gnl]{
