--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -61,9 +61,13 @@
     :root{
       --yazı-biçimi: 'Roboto', sans-serif;
       --yazı-boyutu: 15px;
-      --yazı-rengi: #333;
+      --yazi-rengi: #333;
 
-      --par: 24; --parça: 24;    /* Kap örgüsü varsayılan genişlik */
+      --aralık: 5px;
+      --oluk: 5px;
+
+      --parça: 24; /* parça: par içinde kullanılabilecek parçalardır. */
+      --par: 24;   /* par: parçaların toplamı sonucu oluşabilecek bütündür. */
     }
 
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -161,13 +165,7 @@ G00 GENEL | Ekran ölçeği: 0 ≤ * < ∞
     GS1 | KAP ÖRGÜSÜ
         | Esnekkutu
     */
-    :root{
-      --aralık:5px;
-      --oluk:5px;
 
-      --parça:24; /* parça: par içinde kullanılabilecek parçalardır. */
-      --par:24;   /* par: parçaların toplamı sonucu oluşabilecek bütündür. */
-    }
 
     [data-gnl]{
       display: flex;/* Her durumda esnek görünüm tanımlama ayarı */
